# trit-vsa

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  GPU_DISPATCH_IMPLEMENTATION.md  LICENSE  README.md  REUSE.toml
benches/: ternary_ops.rs
docs/bulletins/: trit-vsa-pin.md
examples/: basic.rs  vsa.rs
scripts/: check.sh
src/: arithmetic.rs  dispatch.rs  error.rs  lib.rs  packed.rs  sparse.rs  trit.rs  tryte.rs  word.rs
src/gpu/: kernels.rs  mod.rs  ops.rs
src/kernels/: burn.rs  cpu.rs  cubecl.rs  mod.rs
src/simd/: avx2.rs  mod.rs  neon.rs
src/vsa/: bind.rs  bundle.rs  mod.rs  similarity.rs
