[package]
name = "trit-vsa"
version = "0.1.1"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Balanced ternary arithmetic library with bitsliced storage and VSA operations"
repository = "https://github.com/tzervas/trit-vsa"
homepage = "https://github.com/tzervas/trit-vsa"
documentation = "https://docs.rs/trit-vsa"
keywords = ["ternary", "arithmetic", "vsa", "hyperdimensional", "bitsliced"]
categories = ["mathematics", "data-structures", "science"]

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
rust-ai-core = { path = "../rust-ai-core", optional = true }
candle-core = { workspace = true, optional = true }
cubecl = { version = "0.9.0", optional = true }
cubecl-cuda = { version = "0.9.0", optional = true }

[dev-dependencies]
criterion = "0.8.1"
proptest = "1.9.0"

[features]
default = []
simd = []
cuda = ["dep:rust-ai-core", "dep:candle-core", "dep:cubecl", "dep:cubecl-cuda", "rust-ai-core/cuda"]

[lints]
workspace = true

[[bench]]
name = "ternary_ops"
harness = false
