[package]
name = "trit-vsa"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Balanced ternary arithmetic library with bitsliced storage and VSA operations"
repository = "https://github.com/tzervas/trit-vsa"
homepage = "https://github.com/tzervas/trit-vsa"
documentation = "https://docs.rs/trit-vsa"
keywords = ["ternary", "arithmetic", "vsa", "hyperdimensional", "bitsliced"]
categories = ["mathematics", "data-structures", "science"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
# Optional GPU path: local sister checkout when building with --features cuda
rust-ai-core = { path = "../rust-ai-core", optional = true }
candle-core = { version = "0.9", optional = true, default-features = false }
cubecl = { version = "0.9", optional = true, default-features = false }
cubecl-cuda = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
proptest = "1.9.0"

[features]
default = []
simd = []
cuda = ["dep:rust-ai-core", "dep:candle-core", "dep:cubecl", "dep:cubecl-cuda", "rust-ai-core/cuda"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"

[[bench]]
name = "ternary_ops"
harness = false
